# bevy-tetris

./: .gitignore  Cargo.toml  README.md  setup_wsl_build.sh
src/: main.rs
src/game/: cell_events.rs  mod.rs  piece_order.rs  piece_types.rs  playfield.rs  render.rs  rotation.rs
src/game/render/: background.rs  cells.rs  filled_cells.rs  mod.rs  piece.rs  playfield_render_size.rs
src/setup/: mod.rs
