[package]
name = "bevy-tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = []}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[target.x86_64-pc-windows-msvc]
linker = "lld"
rustflags = [
  "-Lnative=/home/pete/.xwin/crt/lib/x86_64",
  "-Lnative=/home/pete/.xwin/sdk/lib/um/x86_64",
  "-Lnative=/home/pete/.xwin/sdk/lib/ucrt/x86_64"
]
