[package]
name = "bevy-tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = [] }
bevy-inspector-egui = "0.21.0"
rand_core = "0.6"
bevy_rand = "0.4"
bevy_prng = { version = "0.2", features = ["rand_chacha"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
